[gd_scene load_steps=16 format=2]

[ext_resource path="res://Game/Fishing/Rods/CatchableArea.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sound/SoundEffects/bubble3.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/SoundEffects/chainmail2.wav" type="AudioStream" id=4]
[ext_resource path="res://Game/Fishing/Rods/HitBox.gd" type="Script" id=5]
[ext_resource path="res://Game/Fishing/Rods/ProgressBar.gd" type="Script" id=6]
[ext_resource path="res://Game/Fishing/Rods/Level.gd" type="Script" id=7]
[ext_resource path="res://Game/Fishing/Rods/DefaultRod/DefaultRod.gd" type="Script" id=8]
[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 19.9642 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 20.0479 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5166, 10 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.160784, 0.643137, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 9 )

[node name="Rod" type="Node2D"]
script = ExtResource( 8 )

[node name="CatchableArea" type="KinematicBody2D" parent="."]
position = Vector2( 72, 206.907 )
scale = Vector2( 1, 1.25 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="CatchableArea"]
scale = Vector2( 0.3, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchableArea"]
shape = SubResource( 1 )

[node name="BtmRayCast" type="RayCast2D" parent="CatchableArea"]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2147483650

[node name="TopRayCast" type="RayCast2D" parent="CatchableArea"]
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 2147483650

[node name="HitBox" type="Area2D" parent="CatchableArea"]
collision_layer = 0
collision_mask = 12
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchableArea/HitBox"]
shape = SubResource( 2 )

[node name="Level" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Top" type="StaticBody2D" parent="Level"]
position = Vector2( 73.705, 11 )
collision_layer = 2

[node name="Sprite" type="Sprite" parent="Level/Top"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.33314, 0.500565 )
scale = Vector2( 1.20859, 0.306509 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Top"]
shape = SubResource( 3 )

[node name="Btm" type="StaticBody2D" parent="Level"]
position = Vector2( 73.705, 243 )
rotation = -3.14159
collision_layer = 2

[node name="Sprite" type="Sprite" parent="Level/Btm"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.33314, 0.500565 )
scale = Vector2( 1.20859, 0.306509 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Btm"]
shape = SubResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="Level"]
margin_left = 113.0
margin_top = 232.0
margin_right = 323.0
margin_bottom = 249.0
rect_rotation = 270.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
max_value = 150.0
step = 1.0
percent_visible = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateBar" type="Timer" parent="Level/ProgressBar"]
wait_time = 0.1
autostart = true

[node name="FishStartPosition" type="Position2D" parent="Level"]
position = Vector2( 73.705, 222 )

[node name="SuccessfullCatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="UnsuccessfullCatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="TransitionFromUnsuccessfulCatchTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="TransitionToRewardTimer" type="Timer" parent="."]
one_shot = true

[node name="PerfectLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 4.76218
margin_top = 76.1952
margin_right = 96.7622
margin_bottom = 144.195
rect_rotation = -22.2773
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=6][rainbow freq=0.5 valu=200]PERFECT"
text = "PERFECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnscathedBaitLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 11.9055
margin_top = 106.356
margin_right = 103.906
margin_bottom = 174.356
rect_rotation = -22.2773
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[color=lime][tornado radius=2 freq=10]Bait is saved"
text = "Bait is saved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondChanceLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 3.17479
margin_top = 26.1922
margin_right = 95.1753
margin_bottom = 94.1922
rect_rotation = -22.2773
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[color=yellow][shake rate=15 level=7]One more chance!!!"
text = "One more chance!!!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="CatchableArea/HitBox" to="CatchableArea/HitBox" method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="CatchableArea/HitBox" to="CatchableArea/HitBox" method="_on_HitBox_body_exited"]
[connection signal="timeout" from="Level/ProgressBar/UpdateBar" to="." method="_on_UpdateBar_timeout"]
[connection signal="timeout" from="TransitionFromUnsuccessfulCatchTimer" to="." method="_on_TransitionFromUnsuccessfulCatchTimer_timeout"]
[connection signal="timeout" from="TransitionToRewardTimer" to="." method="_on_TransitionToRewardTimer_timeout"]
